2011-08-02  Vadim Kurland  <vadim@netcitadel.com>

	* instDialog_ui_ops.cpp (instDialog::getInstOptions): moved "batch
	install" button from the main installer wizard to the dialog where
	user enters their password. Now user can start in a non-batch
	install mode but continue in batch install mode at any time if all
	their firewalls authenticate with the same user name and password.

2011-08-01  Vadim Kurland  <vadim@netcitadel.com>

	* pix.g (static_command_common_last_parameters): changed token
	name from "ESP" to "ESP_WORD" to avoid conflict with macro "ESP"
	that happened during build on OpenSolaris

	* unit_tests/ObjectMatcherTest/ObjectMatcherTest.cpp (matchTest):
	fixed unit test (ObjectMatcher matches ipv6 only when internal
	flag is set accordingly)

	* VERSION: set version to 5.0.1

2011-07-28  vadim  <vadim@netcitadel.com>

	* version 5.0.0. release

2011-07-22  vadim  <vadim@netcitadel.com>

	* ObjectManipulator.h (QWidget): see #2622 "Remove Back and
	Forward buttons". We have decided behavior of the GUI was too
	complicated since user can both act on objects directly and
	navigate backwards and forwards to the objects found in their
	browsing history.  Navigation using browsing history was broken
	when quick filter was in use, too. All in all, it feels the value
	of "back" and "forward" buttons was relatively low.

2011-07-21  vadim  <vadim@netcitadel.com>

	* XMLTools.cpp (convert): see #2577 Updated error message that
	appears when user tries to open .fwb file created by the future
	version of fwbuilder.

	* TextFileEditor.cpp (save): fixes #2567 "If file doesn't exist
	when clicking 'edit file', then you have to hit save button twice".
	The bug affected "edit file" function in the Address Table object
	dialog.

	* NATCompiler_pf_writers.cpp (_printAddr): fixes #2590 "PF: NAT
	compiler fails when run-time address table object is used in a
	rule"

	* RoutingCompiler.cpp (processNext): fixes #2565 "Run-time dns